edit to blog text

--- a/_Rmd/2023-06-06-second-blog-post.Rmd
+++ b/_Rmd/2023-06-06-second-blog-post.Rmd
@@ -16,9 +16,9 @@ and very minimal amounts of Python. My opinion on R vs some of the other
 programming languages is that it is very simple and easy to use. I find it to be
 very intuitive and straightforward, while also being advanced enough to conduct
 interesting analyses and create fascinating outputs. This is in contrast to SAS
-(2023my other most used programming language) which is usually not intuitive and 
+(my other most used programming language) which is usually not intuitive and 
 harder to complete tasks that I am interested in achieving. SAS is also far less
-popular, which leads to a lower amount of support online.
+popular, which leads to a lower amount of support online.  
   The functionality that I like most about R is how it is object oriented, which
 makes working on projects far easier to comprehend because of how R stores 
 information. This is much easier than dealing with how SAS treats information
@@ -27,7 +27,7 @@ page. The documentation of every function and procedure made it very easy to
 learn everything about how to achieve a desired output in a uniform way. R
 certainly has a great community to learn from, but they aren't always super 
 clear and sometimes show ways of doing things that are completely different from
-someone else's approach.
+someone else's approach.  
   Personally, I do not find R to be a difficult language to learn. I first 
 learned it in my undergraduate courses and I think the object oriented format
 makes it one of the less complicated languages. It can certainly be frustrating
