--- a/_Rmd/2023-07-09-fifth-blog-post.Rmd
+++ b/_Rmd/2023-07-09-fifth-blog-post.Rmd
@@ -8,7 +8,7 @@ date: "2023-07-09"
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-This blog is to reflect on my efforts to in completing the second project in 
+This blog is to reflect on my efforts in completing the second project in 
 ST 558. I found this project to be less demanding than the first one, but was 
 certainly still challenging overall. For my portion of the work, I wrote the 
 entire introduction to inform the readers of the necessary background 
