adjustment for 6th blog post

--- a/_Rmd/2023-07-19-sixth-blog-post.Rmd
+++ b/_Rmd/2023-07-19-sixth-blog-post.Rmd
@@ -21,7 +21,7 @@ be helpful below.
 
 ### Set Up
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 library(tidyverse)
 library(datasets)
 library(caret)
